# packages/api/src/db/schema/index.ts
@@ -1,6 +1,7 @@
 export * from "./auth";
 export * from "./document";
 export * from "./epub";
+export * from "./highlight";
 export * from "./image";
 export * from "./pdf";
 export * from "./text";
